Demo-CC/uptimekuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 80          # Internal Kubernetes port
      targetPort: 3001   # Container port
  type: LoadBalancer        # Use Loadbalancer
